2005-12-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FormsAuthentication.cs: don't end the request in
	RedirectFromLoginPage.

2005-12-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FormsAuthenticationModule.cs: expire the cookie. Fixes bug #77043.
	Patch by Cyrille Colin.

2005-12-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FormsAuthenticationModule.cs: ignore any exception thrown when mapping
	the provided virtual path to the physical one. Patch by Cyrille Colin.

2005-11-28  Chris Toshok  <toshok@ximian.com>

	* FormsAuthenticationModule.cs (OnAuthenticateRequest):
	CONFIGURATION_2_0 work.
	(OnEndRequest): same.

2005-09-09  Sebastien Pouliot  <sebastien@ximian.com>

	* DefaultAuthenticationEventArgs.cs: Added LinkDemand for Minimal.
	* DefaultAuthenticationModule.cs: Added LinkDemand for Minimal. Added
	Demand for UnmanagedCode on constructor.
	* FileAuthorizationModule.cs: Added LinkDemand for Minimal. Added 
	Demand for UnmanagedCode on constructor.
	* FormsAuthentication.cs: Added LinkDemand for Minimal.
	* FormsAuthenticationEventArgs.cs: Added LinkDemand for Minimal.
	* FormsAuthenticationModule.cs: Added LinkDemand for Minimal. Added 
	Demand for UnmanagedCode on constructor.
	* FormsAuthenticationTicket.cs: Added LinkDemand for Minimal.
	* FormsIdentity.cs: Added LinkDemand for Minimal.
	* PassportAuthenticationEventArgs.cs: Added LinkDemand for Minimal.
	* PassportAuthenticationModule.cs: Added LinkDemand for Minimal. Added
	Demand for UnmanagedCode on constructor.
	* PassportIdentity.cs: Added LinkDemand for Minimal. Added Demand for
	UnmanagedCode on constructor.
	* UrlAuthorizationModule.cs: Added LinkDemand for Minimal. Added 
	Demand for UnmanagedCode on constructor.
	* WindowsAuthenticationEventArgs.cs: Added LinkDemand for Minimal.
	* WindowsAuthenticationModule.cs: Added LinkDemand for Minimal. Added
	Demand for UnmanagedCode on constructor.

2005-09-01  Sebastien Pouliot  <sebastien@ximian.com>
