@@ -1,3 +1,8 @@
+2006-01-03  Chris Toshok  <toshok@ximian.com>
+
+	* UrlAuthorizationModule.cs (OnAuthorizeRequest): add
+	CONFIGURATION_2_0 code here.
+
 2005-12-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* FormsAuthentication.cs: don't end the request in
